Add environmental evidence on victim
Whoa mama this one was a doozy
